# vibe-agents

./: .gitignore  README.md  pyproject.toml
.github/prompts/: plan.prompt.md  specify.prompt.md  tasks.prompt.md
docs/: quickstart.md  workflow.md
memory/: constitution.md  constitution_update_checklist.md
scripts/: check-task-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh
specs/001-llm-api/: .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  cli.py  demo.py  docker-compose.yml  gateway.py  package.json  quickstart.sh  requirements.txt  spec.md  test_gateway.py  tsconfig.json
specs/001-llm-api/src/: cli.ts  gateway.ts  test.ts
src/vibe_agents/: __about__.py  __init__.py  cli.py
templates/: plan-template.md  spec-template.md  tasks-template.md
tests/: test_basic.py
